--- a/app/views/home/gigdog_case_study.html.haml
+++ b/app/views/home/gigdog_case_study.html.haml
@@ -1,7 +1,9 @@
 %div#tagline.gigdog
-	.row
+	.row{:style => "position: relative"}
 		%h3 Music comes home.
-		= image_tag("gigdog_laptop.png")
+		= image_tag ("gigdog_laptop.png"), :id => "laptop_image"
+		= link_to "", mobilizeart_case_study_path, :id => "page_arrow", :class => "prev"
+		= link_to "", greeneggs_case_study_path, :id => "page_arrow", :class => "next"
 %div#case-study-middle-row
 
 #case-study-steps
