--- a/app/views/home/greeneggs_case_study.html.haml
+++ b/app/views/home/greeneggs_case_study.html.haml
@@ -1,7 +1,9 @@
 %div#tagline.greeneggs
-	.row
+	.row{:style => "position: relative"}
 		%h3 Anyone can be cool, but awesome takes practice.
-		= image_tag("greeneggs_iphone.png")
+		= image_tag ("greeneggs_iphone.png"), :id => "laptop_image"
+		= link_to "", gigdog_case_study_path, :id => "page_arrow", :class => "prev"
+		= link_to "", textus_case_study_path, :id => "page_arrow", :class => "next"
 %div#case-study-middle-row
 
 #case-study-steps
