--- a/app/views/home/textus_case_study.html.haml
+++ b/app/views/home/textus_case_study.html.haml
@@ -1,7 +1,9 @@
 %div#tagline.textus
-	.row
+	.row{:style => "position: relative"}
 		%h3 Text Messaging for Business.
-		= image_tag("textus_laptop.png")
+		= image_tag ("textus_laptop.png"), :id => "laptop_image"
+		= link_to "", greeneggs_case_study_path, :id => "page_arrow", :class => "prev"
+		= link_to "", closeoutbikes_case_study_path, :id => "page_arrow", :class => "next"
 %div#case-study-middle-row
 
 #case-study-steps
