adds attribute to disable project link

--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -30,6 +30,9 @@
     .field
       = f.label :featured
       = f.check_box :featured
+    .field
+      = f.label :link_disabled
+      = f.check_box :link_disabled
   .row{:style => "padding-top: 50px"}
     %h3 Save Project:
     .actions
