--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -19,5 +19,8 @@
 		%h4 
 			= @project.result_description
 	.row
-		= link_to "view the site", @project.url, :target => "_blank", :class => "btn blue center top-padding top-margin-small", :method => :get
+		- if @project.link_disabled?
+			= button_to "view the site", @project.url, :class => "btn light-grey center top-margin-small", :disabled => true, :method => :get
+		- else
+			= link_to "view the site", @project.url, :target => "_blank", :class => "btn blue center top-padding top-margin-small", :method => :get
 
