updates style for product/show image

--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -2,7 +2,7 @@
 	.row
 		%h3 
 			= @project.tagline
-		= image_tag(@project.picture.to_s)
+		= image_tag (@project.picture.to_s), :id => "laptop_image"
 %div#case-study-middle-row
 
 #case-study-steps
