renames image file

--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -10,7 +10,7 @@
       %a#darken-box{:href => closeoutbikes_case_study_path}
         %h3 CloseoutBike
         %h4 UI, UX & Branding
-      = image_tag("closeoutbikes_result.png")
+      = image_tag("closeoutbike_result.png")
 
     #mobilizeart-box.column.five
       %a#darken-box{:href => mobilizeart_case_study_path}
