--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -10,7 +10,7 @@
     #project-description.column
       %h3 CloseoutBike
       %h4 We practice perfect simplicity, crafting designs that fulfill the needs of your users, without wasting anyone's time or money.
-      = link_to closeoutbikes_case_study_path, :class => "a-case-study-button closeoutbike" do
+      = link_to "projects/closeoutbike", :class => "a-case-study-button closeoutbike" do
         View case study
 
 #featured-project.mobilizeart
@@ -18,7 +18,7 @@
     #project-description.column
       %h3 MobilizeArt
       %h4 Connect your customers with your market, not your website. Technology is a tool that gets out of the way when used right.
-      = link_to mobilizeart_case_study_path, :class => "a-case-study-button mobilizeart" do
+      = link_to "projects/mobilizeart", :class => "a-case-study-button mobilizeart" do
         View case study
     .column    
       = image_tag("mobilizeart_img.png")
@@ -30,7 +30,7 @@
     #project-description.column
       %h3 Gigdog
       %h4 Why guess when you can test? Use our expertise to validate (or destroy) assumptions, making your site stronger along the way.
-      = link_to gigdog_case_study_path, :class => "a-case-study-button gigdog" do
+      = link_to "projects/gigdog", :class => "a-case-study-button gigdog" do
         View case study
 
 #featured-project.scheduleshare
@@ -38,7 +38,7 @@
     #project-description.column
       %h3 ScheduleShare
       %h4 A Coshx product for the masses. We love to build, and will care for your app as if it were one of our own.
-      = link_to case_study_path, :class => "a-case-study-button scheduleshare" do
+      = link_to "projects/scheduleshare", :class => "a-case-study-button scheduleshare" do
         View case study
     .column
       = image_tag("scheduleshare_img.png")
@@ -50,7 +50,7 @@
     #project-description.column
       %h3 TextUs
       %h4 A Coshx product for the masses. We love to build, and will care for your app as if it were one of our own.
-      = link_to textus_case_study_path, :class => "a-case-study-button textus" do
+      = link_to "projects/textus", :class => "a-case-study-button textus" do
         View case study
 
 
