--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
     = render "shared/facebook_meta", :image => yield(:image), :description => yield(:description), :title => yield(:title)
 
   %body
-    = save_button
+    - # for contenteditable: save_button
     %div.container.main-container
       %div#header
         - if admin_signed_in?
