--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,13 +5,13 @@
 
 #featured-project.closeoutbike
   .row
-    .column
-      = image_tag("closeoutbike_img.png")
-    #project-description.column
+    #project-description.column.float-right
       %h3 CloseoutBike
       %h4 We practice perfect simplicity, crafting designs that fulfill the needs of your users, without wasting anyone's time or money.
       = link_to "projects/closeoutbike", :class => "a-case-study-button closeoutbike" do
         View case study
+    .column.float-left
+      = image_tag("closeoutbike_img.png")
 
 #featured-project.mobilizeart
   .row
@@ -25,13 +25,13 @@
 
 #featured-project.gigdog
   .row
-    .column
-      = image_tag("gigdog_img.png")
-    #project-description.column
+    #project-description.column.float-right
       %h3 Gigdog
       %h4 Why guess when you can test? Use our expertise to validate (or destroy) assumptions, making your site stronger along the way.
       = link_to "projects/gigdog", :class => "a-case-study-button gigdog" do
         View case study
+    .column.float-left
+      = image_tag("gigdog_img.png")
 
 #featured-project.scheduleshare
   .row
@@ -45,12 +45,12 @@
 
 #featured-project.textus
   .row
-    .column
-      = image_tag("textus_img.png")
-    #project-description.column
+    #project-description.column.float-right
       %h3 TextUs
       %h4 A Coshx product for the masses. We love to build, and will care for your app as if it were one of our own.
       = link_to "projects/textus", :class => "a-case-study-button textus" do
         View case study
+    .column.float-left
+      = image_tag("textus_img.png")
 
 
