--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,16 +1,22 @@
 #header-content.row
 
-	.column
-		= link_to image_tag("logo.png"), root_path
+  .column
+    = link_to image_tag("logo.png"), root_path
 
-	%nav
-		%ul#main-nav
-			// = tab_to "HOME", root_path,
-			= tab_to "Get to know us", about_path, active_tab("#{about_path}$")
-			= tab_to "Our work", projects_path, active_tab("#{projects_path}$")
-			= tab_to "Log book", blog_posts_path, active_tab("#{blog_posts_path}$")
-			= tab_to "Careers", jobs_path, active_tab("#{jobs_path}$")
-			= tab_to "Contact", contact_path, active_tab("#{contact_path}$").merge({'data-no-turbolink' => true})
+  %nav
+    %ul#main-nav
+      // = tab_to "HOME", root_path,
+      = tab_to "Get to know us", about_path, active_tab("#{about_path}$")
+      = tab_to "Our work", projects_path, active_tab("#{projects_path}$")
+      = tab_to "Log book", blog_posts_path, active_tab("#{blog_posts_path}$")
+      = tab_to "Careers", jobs_path, active_tab("#{jobs_path}$")
+      = tab_to "Contact", contact_path, active_tab("#{contact_path}$").merge({'data-no-turbolink' => true})
+    %select
+      %option{:value => about_path} Get to know us
+      %option{:value => projects_path} Our work
+      %option{:value => blog_posts_path} Log book
+      %option{:value => jobs_path} Careers
+      %option{:value => contact_path} Contact
 
 
 //=render 'jobs/jobs'
