--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -47,7 +47,7 @@
   .row
     #project-description.column.float-right
       %h3 TextUs
-      %h4 A Coshx product for the masses. We love to build, and will care for your app as if it were one of our own.
+      %h4 The simplest solutions are often the best, and we will work to implement them while keeping costs low.
       = link_to "projects/textus", :class => "a-case-study-button textus" do
         View case study
     .column.float-left
