--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -1,6 +1,6 @@
 #about-header
   .row
-    %h1 Applications are built for people, and so are we.
+    %h1 We build applications for people
     %h2 Watching your idea develop into a valuable application should be fun, not daunting. Our approach makes you an integral part of the process while improving your tech along the way.
 #principles
   .row
