--- a/app/views/home/contact_us.html.haml
+++ b/app/views/home/contact_us.html.haml
@@ -1,10 +1,9 @@
 #contact-header
   .row
-    %h1 Let's get down to business.
+    %h1 Interested in hiring us?
 #contact-body
   .row
-    %h3 Interested in hiring us?
-    %h4 There are no secrets to success. It is the result of preparation, hard work, and learning from failure.
+    %h3 Let's start the conversation.  
     #contactTab
       =render :partial => "messages/contact"
 
