does not require project.url when link disabled

--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -24,7 +24,7 @@
 			= @project.result_description
 	.row
 		- if @project.link_disabled?
-			= button_to "view the site", @project.url, :class => "btn light-grey center top-margin-small", :disabled => true, :method => :get
+			= button_to "view the site", '#', :class => "btn light-grey center top-margin-small", :disabled => true, :method => :get
 		- else
 			= link_to "view the site", @project.url, :target => "_blank", :class => "btn blue center top-padding top-margin-small", :method => :get
 
