--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,7 @@
 #mission-statement
   .row
-    %h1 We take the stress out of web and mobile development
-    %h2 by using our digital expertise and business experience to craft the right application for you and your users.  Let’s build something together.  
+    %h1 Web and mobile applications built for the people that use them
+    %h2 We do tech projects right by using our digital expertise and business experience to craft the right application for you and your users.  Let’s build something together.  
 
 #featured-project.closeoutbike
   .row
