--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -31,7 +31,7 @@
       #icon-text-row
         = image_tag("webapp.png")
         %h5 Web Applications
-      %h6 If your business is on the web then we can help build it or make it better. We have done it all, but will spare you the jargon.
+      %h6 If your business is on the web then we can help build it or make it better. 
     .column.four
       #icon-text-row
         = image_tag("mobapp.png")
@@ -47,7 +47,7 @@
       #icon-text-row
         = image_tag("testing.png")
         %h5 Testing
-      %h6 Stories are nice, but learning through data is what strokes our geek. We track, analyze and learn as we build simply perfect software.
+      %h6 Stories are nice, but learning through data is what creates a great product and a sustainable business. We track, analyze and learn as we build simply perfect software.
     .column.four
       #icon-text-row
         = image_tag("tactics.png")
@@ -72,7 +72,7 @@
       = image_tag("triangle_down.png")
   .row#work-header
     %h3 Our Approach
-    %h4 Our process is highly iterative and focused on the needs of your business, not ours. Technology exists for the people who will use (and pay for) it, and we never forget that.
+    %h4 Our process is highly iterative and focused on the needs of your business and its customers. Technology exists for the people who use it, and we never forget that.
   .row#step.even
     .column.four
       #circle-off-white
