updates mobile menu for #96
 - removed side menu since it needed a hack to set the height, and it wasn't working
 - this works well except for when the browser width is between 765 and 960, when the links show up to the right of the logo

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -54,6 +54,18 @@ nav {
   nav .burger { display: block; }
 }
 
+nav ul.mobile {
+  display: block;
+  float: none;
+  li {
+    float: none;
+    display: block;
+    width: 100%;
+    padding-bottom: 16px;
+    margin-left: 0px;
+  }
+}
+
 .burger {
   -webkit-transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
