fixes form width on contact page

--- a/app/assets/stylesheets/contact_us.css.scss
+++ b/app/assets/stylesheets/contact_us.css.scss
@@ -19,12 +19,12 @@
 		margin-left: auto;
 		margin-right: auto;
 
-		.five.columns {
-			max-width: 400px;
-		}
-
 		.twelve.columns {
 			height: 480px;
+		}
+
+		.six.columns {
+			max-width: 400px;
 		}
 	}
 
