--- a/app/views/home/careers.html.haml
+++ b/app/views/home/careers.html.haml
@@ -1,4 +1,5 @@
-#contact-body
-  .row
-    %h3 Interested in joining our team?
-    %h4 Send an email to jobs@coshx.com
+#careers-body
+  #careers-box
+    .row
+      %h1 Interested in joining our team?
+      %h2 Send an email to #{link_to "jobs@coshx.com", "mailto:jobs@coshx.com"}
