adds text on contact page

--- a/app/views/home/contact_us.html.haml
+++ b/app/views/home/contact_us.html.haml
@@ -3,7 +3,8 @@
     %h1 Interested in hiring us?
 #contact-body
   .row
-    %h3 Let's start the conversation.  
+    %h3 Let's start the conversation. 
+    %h4 There are no secrets to success. It is the result of preparation, hard work, and learning from failure. 
     #contactTab
       =render :partial => "messages/contact"
 
