fixes alignment on about page

--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -16,7 +16,7 @@
       %h6 Great design means more than looking pretty, but your software will be the hottest in town
     .column.four
       #circle-white
-      = image_tag("cendev.png")
+      = image_tag("cendev.png", :style => "padding-bottom: 9px")
       %h5 User-centered development
       %h6 We build powerfully simple software by focusing on users and their needs
 
