--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -61,6 +61,17 @@
       color: #38A8CC;
     }
   }
+
+  li {
+    text-align: left;
+    font-size: 22px;
+    font-family: "Merriweather", serif;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    a {
+      color: #38A8CC;
+    }
+  }
 }
 
 #more-by-author {
