--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,8 @@
 #header-content.row
 
   .column
-    = link_to image_tag("logo.png"), root_path
+    #logo
+      %a{href: root_path}
 
   %nav
     %ul#main-nav
