adds mailto links on footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -6,22 +6,24 @@
       %h3 Boulder <br><br>
       %h4 3080 Valmont Rd Suite 280
       %h4 Boulder, CO 80301 <br><br>
-      %h5 info@coshx.com
+      %h5= link_to 'info@coshx.com', 'mailto:info@coshx.com'
     #location.column.two
       %h3 Charlottesville <br><br>
       %h4 1110 East Market St Suite N7
       %h4 Charlottesville, VA 22902 <br><br>
-      %h5 info@coshx.com
+      %h5= link_to 'info@coshx.com', 'mailto:info@coshx.com'
+
     #location.column.two
       %h3 San Francisco <br><br>
       %h4 972 Mission Street, 5th Floor
       %h4 San Francisco, CA 94103 <br><br>
-      %h5 info@coshx.com
+      %h5= link_to 'info@coshx.com', 'mailto:info@coshx.com'
+
     #location.column.two
       %h3 Austin <br><br>
       %h4 701 Brazos St, Suite 1601
       %h4 Austin, TX 78701 <br><br>
-      %h5 info@coshx.com
+      %h5= link_to 'info@coshx.com', 'mailto:info@coshx.com'
     #social.column.one
       %h3 Social 
       = link_to image_tag("footer-twitter.png"), "http://www.twitter.com/coshxlabs"
