--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -5,15 +5,29 @@
   width: 100%;
   background-color: #FFFFFF;
   position: relative;
+  padding-top: 80px;
+
 
   h1 {
     font-size: 40px;
   }
   h2 {
-    padding-bottom: 175px;
+    padding-bottom: 100px;
   }
-  .row {
-    padding-top: 80px;
+}
+
+#scroll-down {
+  height: 30px;
+  border-top: 1px solid #f8f7f5;
+  padding-top: 0;
+  text-align: center;
+
+  h5 {
+    font-family: "Merriweather Sans", serif;
+    font-size: 12px;
+    margin-top: 2px;
+    font-weight: normal;
+    color: #535353;
   }
 }
 
