extends separator line

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,8 +2,8 @@
   .row
     %h1 We take the stress out of web and mobile development.
     %h2 We do tech projects right by using our digital expertise and business experience to craft the right application for you and your users.  Let’s build something together.
-  #scroll-down.row
-    %h5 Scroll down to see more
+#scroll-down
+  %h5 Scroll down to see more
 
 #projects
   .featured-project.closeoutbike
