changes log book to blog

--- a/app/views/layouts/_menu_tabs.html.haml
+++ b/app/views/layouts/_menu_tabs.html.haml
@@ -1,5 +1,5 @@
 = tab_to "Get to know us", about_path, active_tab("#{about_path}$")
 = tab_to "Our work", projects_path, active_tab("#{projects_path}$")
-= tab_to "Log book", blog_posts_path, active_tab("#{blog_posts_path}$")
+= tab_to "Blog", blog_posts_path, active_tab("#{blog_posts_path}$")
 = tab_to "Careers", careers_path, active_tab("#{jobs_path}$")
 = tab_to "Contact", contact_path, active_tab("#{contact_path}$").merge({'data-no-turbolink' => true})
