removes mentioning failure in contact page

--- a/app/views/home/contact_us.html.haml
+++ b/app/views/home/contact_us.html.haml
@@ -4,7 +4,7 @@
 #contact-body
   .row
     %h3 Let's start the conversation. 
-    %h4 There are no secrets to success. It is the result of preparation, hard work, and learning from failure. 
+    %h4 There are no secrets to success. It is the result of preparation, hard work, and learning from experience. 
     #contactTab
       =render :partial => "messages/contact"
 
