--- a/app/views/home/contact_us.html.haml
+++ b/app/views/home/contact_us.html.haml
@@ -1,6 +1,6 @@
 #contact-header
   .row
-    %h1 Interested in hiring us?
+    %h1 Interested in working with us?
 #contact-body
   .row
     %h3 Let's start the conversation. 
