--- a/app/assets/stylesheets/contact_us.css.scss
+++ b/app/assets/stylesheets/contact_us.css.scss
@@ -2,6 +2,7 @@
 
 #contact-header {
 	background-color: $grey-white;
+	z-index: 10;
 
 	h1 {
 		margin-top: 80px;
@@ -13,6 +14,7 @@
 	background-color: white;
 	padding-top: 50px;
 	border-bottom: 1px solid #e9e9e9;
+	z-index: 10;
 
 	.row {
 		max-width: 833px;
@@ -61,7 +63,8 @@
 
 #map-container {
 	position: fixed;
-	bottom: 0;
+	z-index: -1;
+	bottom: -104px;
 	left: 0;
 	right: 0;
 }
