--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -12,6 +12,10 @@ body {
   -webkit-backface-visibility: hidden;
 }
 
+div { 
+  position: relative;
+}
+
 @media (max-width: 1140px) {
   .row {
     padding-left: 30px;
