--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,20 +17,22 @@
     = render "shared/facebook_meta", :image => yield(:image), :description => yield(:description), :title => yield(:title)
 
   %body
-    %div.container.main-container.body
-      %div#header
+    %header
+      %div#site-header.sticky-header
         - if admin_signed_in?
           = render "layouts/admin_menu"
         = render "layouts/header"
-      %div#content
-        = yield
-    - unless (params[:controller] == 'errors')
-      - unless (params[:controller] == 'posts' || params[:controller] == 'projects' || current_page?('/careers'))
-        = render "layouts/site_links"
-      - unless (params[:controller] == 'posts' || current_page?('/contact') || current_page?('/careers'))
-        = render "layouts/together"
-      - if current_page?('/contact')
-        #footer-with-map
+    %div.container.main-container.body
+      %section.feature
+        = render "layouts/top_section"
+      = yield
+      - unless (params[:controller] == 'errors')
+        - unless (params[:controller] == 'posts' || params[:controller] == 'projects' || current_page?('/careers'))
+          = render "layouts/site_links"
+        - unless (params[:controller] == 'posts' || current_page?('/contact') || current_page?('/careers'))
+          = render "layouts/together"
+        - if current_page?('/contact')
+          #footer-with-map
+            = render "layouts/footer"
+        - else 
           = render "layouts/footer"
-      - else 
-        = render "layouts/footer"
