--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -5,3 +5,4 @@
     %ul
       %li=link_to "New Blog Post", :new_post
       %li=link_to "edit my profile", "edit_my_profile"
+      %li=link_to "New Idea", :new_idea
