--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -3,7 +3,7 @@
 @media only screen and (max-width: 767px) {
   body .the-button, .a-button {
     width: 90% !important;
-    dispaly: block !important;
+    display: block !important;
     margin-left: auto !important;
     margin-right: auto !important;
   }
