makes admin menu less intrusive

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -67,5 +67,7 @@ div {
 }
 
 #admin-menu {
-  padding-top: 20px;
+  padding-top: 8px;
+  background-color: lighten($blue, 50%);
+  line-height: 19px;
 }
