--- a/app/views/layouts/_admin_menu.html.haml
+++ b/app/views/layouts/_admin_menu.html.haml
@@ -2,9 +2,10 @@
   .five.columns
     %ul.link-list
       //%li=link_to "Dashboard", admin_root_path
-      //%li=link_to "New Blog Post", new_post_path
+      %li=link_to "New Blog Post", new_post_path
       //%li=link_to "New Job Posting", new_job_path
       %li=link_to "New Project", new_project_path
+      %li=link_to "New Idea", new_idea_path
   .four.columns
     %span.status
       Signed in as
